--- a/ApplicationInsights.NetCore/ApplicationInsights.NetCore.csproj
+++ b/ApplicationInsights.NetCore/ApplicationInsights.NetCore.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>41a7bcb5-1c7a-4e7f-b088-41757fd6cb4f</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.17.0" />
+  </ItemGroup>
 
 </Project>
