--- a/ApplicationInsights.NetCore/appsettings.json
+++ b/ApplicationInsights.NetCore/appsettings.json
@@ -1,5 +1,10 @@
 {
   "Logging": {
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Error"        
+      }
+    },
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
@@ -7,4 +12,4 @@
     }
   },
   "AllowedHosts": "*"
-}
+  }
